[package]
name = "mini-motorwaysx"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0-or-later"
license-file = "LICENSE"

[lib]
name = "internal"

[dependencies]
actix-web = "4.0.0-beta.8"
anyhow = "1.0.43"
log = "0.4.14"
once_cell = "1.8.0"
pretty_env_logger = "0.4.0"
serde = "1.0.130"
serde_json = "1.0.67"
toml = "0.5.8"
